--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="penrosetriangle.svg">
 </head>
 <body class="sans">
-<b><a href="#">HOME</a></b> / <a href="./proposal.html">PROPOSAL</a> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">WRITEUP</a>  / <a href="./demo.html">DEMO</a>
+<b><a href="#">HOME</a></b> / <a href="./proposal.html">PROPOSAL</a> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">NOTES</a> / <a href="./report.html">REPORT</a> / <a href="./demo.html">DEMO</a>
 <br />
 <br />
 <br />
@@ -37,3 +37,6 @@ Eunice Chan | <i>June 22, 2020</i>
     <li><a href="https://www.linkedin.com/learning/learning-3d-graphics-on-the-web-with-three-js"> Link to the Learning 3D Graphics on the Web with Three.js online course</a></li>
   </ul>
 </ul>
+
+</body>
+</html>
