--- a/milestone.html
+++ b/milestone.html
@@ -5,18 +5,18 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js" integrity="sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js" integrity="sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
-<title>Expressive Inverse Kinematics | CS 184 Final Project Milestone Report</title>
+<title>Inverse Kinematics | CS 184 Final Project Milestone Report</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="penrosetriangle.svg">
 </head>
 
 <body class="sans">
-<a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <b><a href="#">MILESTONE</a></b> / <a href="./project.html">WRITEUP</a>  / <a href="./demo.html">DEMO</a>
+<a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <b><a href="#">MILESTONE</a></b> / <a href="./project.html">NOTES</a> / <a href="./report.html">REPORT</a> / <a href="./demo.html">DEMO</a>
 <br />
 <br />
 <br />
 <br />
-<h1 class="page-title">Expressive Inverse Kinematics</h1><h1>CS 184 Final Project Milestone Report</h1>
+<h1 class="page-title">Inverse Kinematics</h1><h1>CS 184 Final Project Milestone Report</h1>
 Eunice Chan | <i>August 7, 2020</i>
 <br />
 <br />
@@ -126,6 +126,7 @@ My Descent into Madness, a 4-part comedy
 
 <h2>Looking Forward</h2>
 <p>I have underestimated how long implementation of the algorithms would take. In my current iteration of the LM algorithm implementation, I have reduced the complexity to three joints with a single degree of freedom each and have managed to get a running but not working-as-expected implementation. Because of this difficulty, I do not think I will be able to reach the stylization part of my initial proposal. I have to be mindful of time as I would need to wrap up as well as create the deliverables which means I ought to spend the last few days polishing the appearance and functionality of the demo, writing the report, and creating the video. Essentially, I have four more days to work on additional functionality as I plan on taking the last two days to wrap up. My plan moving forward is to finish a simple, functional implementation of LM and then if I have extra time, begin implementation of SMCM. Drawing from my experience debugging my implementations for LM, I am not confident I could get it to a functional state before it is due, but I would like to take the time to work on it.</p>
+<p>More immediately, looking a few steps ahead, I can see myself working on debugging my implementation of LM while implementing additional functionality on the GUI such as drawing a line between the target and end points so I can more visually see when the algorithm is working correctly, because if it has fallen into a local minimum, it can be difficult to see sometimes.</p>
 <br />
 </body>
 </html>
