--- a/proposal.html
+++ b/proposal.html
@@ -1,19 +1,19 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>Expressive Inverse Kinematics | CS 184 Final Project Proposal</title>
+<title>Inverse Kinematics | CS 184 Final Project Proposal</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="penrosetriangle.svg">
 </head>
 <body class="sans">
 <a href="./index.html">HOME</a> / <b>
 <a href="#">PROPOSAL</a>
-</b> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">WRITEUP</a>  / <a href="./demo.html">DEMO</a>
+</b> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">NOTES</a> / <a href="./report.html">REPORT</a> / <a href="./demo.html">DEMO</a>
 <br />
 <br />
 <br />
 <br />
-<h1 class="page-title">Expressive Inverse Kinematics</h1>
+<h1 class="page-title">Inverse Kinematics</h1>
 <h1>CS 184 Final Project Proposal</h1>
 Eunice Chan | <i>August 1, 2020</i>
 <br />
@@ -214,6 +214,46 @@ Add style to the movements and wrap up project.
   <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Debug/get working for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Draw line between target and endpoint to display distance</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Toggle distance line display in GUI</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Allow setting pink with XYZ slider in GUI</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Console.log target and endpoint positions</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Remove WASD + trackpad controls</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Move console.log messages to a side panel?</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Allow user to set lambda change values in GUI</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Button to reset target position in GUI</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Update notes for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Update notes for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
