--- a/demo.html
+++ b/demo.html
@@ -1,17 +1,17 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>Expressive Inverse Kinematics | CS 184 Final Project Demo</title>
+<title>Inverse Kinematics | CS 184 Final Project Demo</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="penrosetriangle.svg">
 </head>
 <body class="sans">
-<a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">WRITEUP</a>  / <b><a href="./demo.html">DEMO</a></b>
+<a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">NOTES</a> / <a href="./report.html">REPORT</a> / <b><a href="./demo.html">DEMO</a></b>
 <br />
 <br />
 <br />
 <br />
-<h1 class="page-title">Expressive Inverse Kinematics</h1><h1>CS 184 Final Project Demo</h1>
+<h1 class="page-title">Inverse Kinematics</h1><h1>CS 184 Final Project Demo</h1>
 Eunice Chan | <i>August 14, 2020</i>
 <br />
 <br />
