--- a/proposal.html
+++ b/proposal.html
@@ -225,6 +225,14 @@ Add style to the movements and wrap up project.
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Make outer for loop part of the render cycle (so render each iteration's change)</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Reset target pose in GUI</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Allow setting pink with XYZ slider in GUI</span>
   </li>
   <li>
@@ -246,10 +254,6 @@ Add style to the movements and wrap up project.
   <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Button to reset target position in GUI</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Update notes for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
