Fixed betaToPoint prediction code

--- a/demo.html
+++ b/demo.html
@@ -18,10 +18,10 @@ Eunice Chan | <i>August 14, 2020</i>
 <br />
 <p><a href="./ik.html">Fullscreen here.</a></p>
 <iframe style="width:100%;height:50vw" src="./ik.html"></iframe>
-<h1>Instructions</h1>
+<!-- <h1>Instructions</h1>
 <ul>
   <li>WASD to move target point along the X-Z axes.</li>
   <li><code>SHIFT</code> + move mouse up or down to move along the Y axis.</li>
-</ul>
+</ul> -->
 </body>
 </html>
