--- a/project.html
+++ b/project.html
@@ -209,5 +209,6 @@ So, I decided to take their suggestion and export as a <code>.GLTF</code> file.<
 <h3>Parameters</h3>
 <!-- <p>In our case, we want to minimize the square error between our guess ( \(\beta\) ) and the goal (the target point).</p> -->
 <p>In the specific case of the arm model, there is one end effector as identified with the green sphere that is associated with the target point identified by the pink sphere.</p>
+<!-- Does not handle arbitrary intial guesses well -->
 </body>
 </html>
