--- a/proposal.html
+++ b/proposal.html
@@ -212,48 +212,48 @@ Add style to the movements and wrap up project.
 </ul> -->
 <ul class="to-do-list">
   <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Draw line between target and endpoint to display distance</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Toggle distance line display in GUI</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Make outer for loop part of the render cycle (so render each iteration's change)</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Reset target pose in GUI</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Allow setting pink with XYZ slider in GUI</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Remove WASD + trackpad controls</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Allow user to set lambda change values in GUI</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Button to reset target position in GUI</span>
+  </li>
+  <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Debug/get working for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Draw line between target and endpoint to display distance</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Toggle distance line display in GUI</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Make outer for loop part of the render cycle (so render each iteration's change)</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Reset target pose in GUI</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Allow setting pink with XYZ slider in GUI</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Console.log target and endpoint positions</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Remove WASD + trackpad controls</span>
+    <span class="to-do-children-unchecked">Console.log target and endpoint positions?</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Move console.log messages to a side panel?</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Allow user to set lambda change values in GUI</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Button to reset target position in GUI</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
