translational joints working

--- a/proposal.html
+++ b/proposal.html
@@ -244,16 +244,12 @@ Add style to the movements and wrap up project.
     <span class="to-do-children-checked">Button to reset target position in GUI</span>
   </li>
   <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Debug/get working for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Debug/get working for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
   </li>
   <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Console.log target and endpoint positions?</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Move console.log messages to a side panel?</span>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Allow user to control more variables</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
@@ -265,20 +261,17 @@ Add style to the movements and wrap up project.
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Polish appearance</span>
+    <span class="to-do-children-unchecked">Rewrite to not use Three.js Vector3/Matrix3</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Polish functionality</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Allow user to control more variables</span>
+    <span class="to-do-children-unchecked">Move console.log messages to a side panel?</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">General bug fixes</span>
   </li>
+  <b>Thursday+</b>
   <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Write final deliverable writeup report (referencing the currently written writeup)</span>
@@ -509,13 +502,19 @@ Add style to the movements and wrap up project.
       <li>Wireframe for debugging.</li>
     </ul>
   </li>
-
   <li>
     <a href="http://www.brnt.eu/publications/brunet2010phd.pdf">http://www.brnt.eu/publications/brunet2010phd.pdf</a>
     <ul>
-      <li>Has some key optimization algorithms explained! A thesis on the modelling and the estimation of parametric functions in Computer Vision. I</li>
+      <li>Has some key optimization algorithms explained! A thesis on the modelling and the estimation of parametric functions in Computer Vision.</li>
     </ul>
   </li>
+  <li>
+      <a href="https://www.researchgate.net/publication/273166356_Inverse_Kinematics_a_review_of_existing_techniques_and_introduction_of_a_new_fast_iterative_solver#pf1d">https://www.researchgate.net/publication/273166356_Inverse_Kinematics_a_review_of_existing_techniques_and_introduction_of_a_new_fast_iterative_solver#pf1d</a>
+      <ul>
+        <li>Super helpful and informative. Another overview with details about various approaches.</li>
+      </ul>
+    </li>
+
 </ul>
 </body>
 </html>
