--- a/report.html
+++ b/report.html
@@ -10,7 +10,7 @@
 <link rel="icon" href="penrosetriangle.svg">
 </head>
 <body class="sans">
-<b><a href="#">HOME</a></b> / <a href="./proposal.html">PROPOSAL</a> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">NOTES</a> / <a href="./report.html">REPORT</a> / <a href="./demo.html">DEMO</a>
+<a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">NOTES</a> / <b><a href="#">REPORT</a></b> / <a href="./demo.html">DEMO</a>
 <br />
 <br />
 <br />
