--- a/proposal.html
+++ b/proposal.html
@@ -252,8 +252,8 @@ Add style to the movements and wrap up project.
     <span class="to-do-children-checked">Allow user to control more variables</span>
   </li>
   <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Update notes for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Update notes for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
@@ -265,7 +265,7 @@ Add style to the movements and wrap up project.
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Move console.log messages to a side panel?</span>
+    <span class="to-do-children-unchecked">Add explanations about GUI</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
