--- a/proposal.html
+++ b/proposal.html
@@ -261,11 +261,23 @@ Add style to the movements and wrap up project.
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Rewrite to not use Three.js Vector3/Matrix3</span>
+    <span class="to-do-children-unchecked">Create Array class</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Add explanations about GUI</span>
+    <span class="to-do-children-unchecked">Create Matrix class?</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Rewrite to not use Three.js Vector3/Matrix3 + greater flexibility in number of DoF + joints</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Refactor JS to use modules</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Add explanations about GUI options</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
@@ -513,8 +525,13 @@ Add style to the movements and wrap up project.
       <ul>
         <li>Super helpful and informative. Another overview with details about various approaches.</li>
       </ul>
-    </li>
-
+  </li>
+  <li>
+      <a href="https://www.researchgate.net/publication/224240315_Solvability-Unconcerned_Inverse_Kinematics_by_the_Levenberg-Marquardt_Method/link/59259217a6fdcc4443363257">https://www.researchgate.net/publication/224240315_Solvability-Unconcerned_Inverse_Kinematics_by_the_Levenberg-Marquardt_Method/link/59259217a6fdcc4443363257</a>
+      <ul>
+        <li>Paper on LM for IK</li>
+      </ul>
+  </li>
 </ul>
 </body>
 </html>
