--- a/translation/iktjd3.html
+++ b/translation/iktjd3.html
@@ -16,13 +16,15 @@
 <script src="./lib/perlin.js"></script>
 <script src="./lib/dat.gui.min.js"></script>
 <script src="./lib/stats.js"></script>
-<script src="./lib/three.js"></script>
-<script src="./lib/OBJLoader.js"></script>
 <script src="./lib/OrbitControls.js"></script>
+<script src="./lib/three.js"></script>
 
 <script src="./manipulationUtils.js"></script>
 <script src="./methodsIK.js"></script>
 <script src="./demoUtils.js"></script>
+<!--
+<script type="module" src="./demo.js"></script>
+-->
 <script src="./demo.js"></script>
 
 </body>
