--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
-<html>
+Kinematics<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>Inverse Kinematics | CS 184 Final Project Demo</title>
+<title>Kinematics | CS 184 Final Project Demo</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="penrosetriangle.svg">
 </head>
@@ -11,7 +11,7 @@
 <br />
 <br />
 <br />
-<h1 class="page-title">Inverse Kinematics</h1><h1>CS 184 Final Project Demo</h1>
+<h1 class="page-title">Kinematics</h1><h1>CS 184 Final Project Demo</h1>
 Eunice Chan | <i>August 14, 2020</i>
 <br />
 <br />
