--- a/report.html
+++ b/report.html
@@ -15,7 +15,7 @@
 <br />
 <br />
 <br />
-<h1 class="page-title">Inverse Kinematics</h1><h1>CS 184 Final Project Report</h1>
+<h1 class="page-title">Kinematics</h1><h1>CS 184 Final Project Report</h1>
 Eunice Chan | <i>August 14, 2020</i>
 <br />
 <br />
