--- a/translation/iktjd3.html
+++ b/translation/iktjd3.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>Inverse Kinematics | CS 184 Final Project Demo</title>
+<title>Kinematics | CS 184 Final Project Demo</title>
 <link rel="icon" href="penrosetriangle.svg">
 </head>
 <body style="margin:0;padding:0;">
