--- a/milestone.html
+++ b/milestone.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js" integrity="sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js" integrity="sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
-<title>Inverse Kinematics | CS 184 Final Project Milestone Report</title>
+<title>Kinematics | CS 184 Final Project Milestone Report</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="penrosetriangle.svg">
 </head>
@@ -16,7 +16,7 @@
 <br />
 <br />
 <br />
-<h1 class="page-title">Inverse Kinematics</h1><h1>CS 184 Final Project Milestone Report</h1>
+<h1 class="page-title">Kinematics</h1><h1>CS 184 Final Project Milestone Report</h1>
 Eunice Chan | <i>August 7, 2020</i>
 <br />
 <br />
