--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js" integrity="sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js" integrity="sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
-<title>Inverse Kinematics | CS 184 Final Project Notes</title>
+<title>Kinematics | CS 184 Final Project Notes</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="penrosetriangle.svg">
 </head>
@@ -16,7 +16,7 @@
 <br />
 <br />
 <br />
-<h1 class="page-title">Inverse Kinematics</h1><h1>CS 184 Final Project Notes</h1>
+<h1 class="page-title">Kinematics</h1><h1>CS 184 Final Project Notes</h1>
 Eunice Chan | <i>August 7, 2020</i>
 <br />
 <br />
@@ -241,5 +241,48 @@ So, I decided to take their suggestion and export as a <code>.GLTF</code> file.<
   <li>Resampling. Draw N samples with replacement from the weighted set \(\tilde x_{0:t}^{(i)}\).</li>
 </ol>
 <p>To use this algorithm for IK, each render runs one iteration of this and take the parameter that has the heaviest weight associated with it.</p>
+<p>The steps are as follows:</p>
+<p>(Heavily inspired by <a href="http://perception.inrialpes.fr/Publications/2008/CA08/amdo08.pdf">this</a>.)</p>
+<ol>
+  <li>Explore the state space with N copies of the system (particles). For \(i = 1...N\), draw \(Q^{(i)}_k \sim p(Q_k|Q^{(i)}_{k−1})\) where \(p(Q_k|Q^{(i)}_{k−1})\) is the evolution prior. We do this by rejection sampling from a distribution (centered at Q^{(i)}_{k−1}) if there's no a prior knowledge. Otherwise, change the mean to reflect the knowledge) until the sample is accepted. Put hard constraints like joint limits or self-intersection avoidance here. The main advantage of using SMCM is that it deals with inequality constraints simply--either accepting or rejecting.</li>
+  <ul>
+    <li>In the demo, I sample uniformly at random N times near the current position from the sample space and since there is no constraint, I do not reject any sample.</li>
+  </ul>
+  <li>Calculate the weights to be equal to the \(w^{(i)}_k \propto p(y_k|Q^{(i)}_k)\), then normalize them to sum to 1. Here, \(p(y_k|Q^{(i)}_k)\) is the likelihood. It acts like the objective function and gives an evaluation of how good the configuration is with respect to the desired task. For example, one can set likelihood to be the distance between the end effector configuration and the desired configuration. Put soft or numerical constraints (such as minimizing a given function) here.</li>
+  <li>Set the mesh position to be the MAP estimate (the particle with the greatest probability). To smooth out the motion, interpolate.</li>
+  <li>Mutate and reselect the particles.</li>
+</ol>
+<p>Since these are random samples, it's very Here, the speed slider's linear interpolations serves to smooth the trajectory.</p>
+<table>
+  <tr>
+    <td>
+      <video preload controls>
+          <source src="./images/SMCM_nosmooth_5.mov" />
+          <p>Your browser doesn't support my video. Here is a <a href="./images/SMCM_nosmooth_5.mov">link to the video</a> instead.</p>
+      <figcaption>Particle count n = 5, no smoothing</figcaption>
+    </td>
+    <td>
+      <video preload controls>
+          <source src="./images/IK_translation_LM.mov" />
+          <p>Your browser doesn't support my video. Here is a <a href="./images/target_demo.mov">link to the video</a> instead.</p>
+      <figcaption>Particle count n = 10000, no smoothing</figcaption>
+    </td>
+  </tr>
+
+    <tr>
+      <td>
+        <video preload controls>
+            <source src="./images/SMCM_smooth_5.mov" />
+            <p>Your browser doesn't support my video. Here is a <a href="./images/SMCM_smooth_5.mov">link to the video</a> instead.</p>
+        <figcaption>Particle count n = 5, smoothing</figcaption>
+      </td>
+      <td>
+        <video preload controls>
+            <source src="./images/IK_translation_LM.mov" />
+            <p>Your browser doesn't support my video. Here is a <a href="./images/target_demo.mov">link to the video</a> instead.</p>
+        <figcaption>Particle count n = 10000, smoothing</figcaption>
+      </td>
+    </tr>
+</table>
 </body>
 </html>
